# hanmo

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: release.yml
src/: compat.rs  lib.rs  syllable.rs
